<resources>
    <string name="default_web_client" translatable="false">89971050605-prtkbrjvfgpg47ega6er93otcujbtgg8.apps.googleusercontent.com</string>

    <string name="app_name" translatable="false">InkSeeker</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="preferred">Preferred</string>
    <string name="profile">Profile</string>

    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_loginBtn">Login</string>
    <string name="login_forgot_password">Forgotten password?</string>
    <string name="login_yet_not_account">Don\'t have an account?</string>

    <string name="register_register">Sign Up</string>
    <string name="register_repeatPwd">Repeat Password</string>

    <string name="login_missing_email">Fill the email field</string>
    <string name="login_missing_pwd">Fill the password field</string>
    <string name="register_missing_rep_pwd">Repeat the password</string>
    <string name="register_pwd_not_matching">Passwords doesn\'t match</string>
    <string name="denied_permission">Location permission has been denied.</string>
    <string name="explore_title">Explore</string>
    <string name="explore_search_hint">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="translate_lang_select">Translate</string>
    <string name="translate_lang_list">Select language:</string>
    <string name="contattaci_title">Contact Us</string>
    <string name="faq_description">Here you\'ll find the answers to all the frequently asked questions</string>
    <string name="contact_us_description">Send us a message!</string>

    <string name="settings">Settings</string>
    <string name="personal_info">Personal Information</string>
    <string name="accessibility_security">Accessibility and Security</string>
    <string name="privacy" translatable="false">Privacy</string>
    <string name="logout">Logout</string>

    <string name="search">Search...</string>

    <string name="saved">Saved Folders</string>

    <string name="studios">Studios</string>
    <string name="tatoo">Tatoos</string>

    <string name="add_folder">Add Folder : </string>
    <string name="add_folder_hint">Folder Name...</string>

    <string name="edit_folder">Edit Folder Name</string>
    <string name="del_folder">Delete Folder</string>

    <string name="popup_warning_title">Deleting this folder is permanent</string>
    <string name="popup_warning_msg">Are you sure you want to delete this folder?</string>

    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>

    <string name="ok" translatable="false">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <string name="register_username">Username</string>
    <string name="register_missing_username">Fill the username field</string>
    <string name="animals">Animals</string>
    <string name="anime" translatable="false">Anime/Manga</string>
    <string name="blackwork" translatable="false">Blackwork</string>
    <string name="cartoon" translatable="false">Cartoon</string>
    <string name="colored">Colored</string>
    <string name="concept_art" translatable="false">Concept Art</string>
    <string name="fantasy" translatable="false">Fantasy</string>
    <string name="fineline" translatable="false">Fineline</string>
    <string name="geometric">Geometric</string>
    <string name="illustrative">Illustrative</string>
    <string name="lettering" translatable="false">Lettering</string>
    <string name="maori" translatable="false">Maori</string>
    <string name="microrealistic">Microrealistic</string>
    <string name="mosaic">Mosaic</string>
    <string name="ornamental">Ornamental</string>
    <string name="patch" translatable="false">Patch</string>
    <string name="realistic">Realistic</string>
    <string name="sketch">Sketch</string>
    <string name="traditional">Traditional</string>
    <string name="watercolor">Water Color</string>
    <string name="floreal">Floreal</string>
    <string name="tatooer_studios">Studios</string>
    <string name="tatooer_styles">Styles</string>
    <string name="login_title">Log into your account</string>
    <string name="register_title">Create your account</string>
    <string name="register_already_have_account">Already got an account?</string>
    <string name="piercing" translatable="false">Piercing</string>
    <string name="confirm">Confirm</string>
    <string name="preferred_title">Your albums</string>
    <string name="studio_tatooers">Tatooers</string>
    <string name="studio_styles">Styles</string>
    <string name="preferred_studios">Studios</string>
    <string name="preferred_add_folder">Add Folder:</string>
    <string name="preferred_default_folder">Default</string>
    <string name="contattaci_suggestions">Do you have any questions or suggestions?</string>
    <string name="contacts_title">Contacts</string>
    <string name="contattaci_faq" translatable="false">FAQ</string>
    <string name="contacts_phone">Phone</string>
    <string name="faq_1_q">Which are exclusive functions for signed up users?</string>
    <string name="faq_1_a">Only signed up users can save studios and tattoers</string>
    <string name="faq_2_q">How do i check my folders?</string>
    <string name="faq_2_a">Tap the ♡ icon in the bottom bar</string>
    <string name="faq_3_q">How to log out from the account?</string>
    <string name="faq_3_a">Tap the profile icon in the bottom bar, then tap Logout</string>
    <string name="faq_4_q">How do I change language on InkSeeker?</string>
    <string name="faq_4_a">Tap the profile icon in the bottom bar, then tap on Translations and finally on the desired language</string>
    <string name="profile_translate">Translation</string>
</resources>