<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTintMode="src_over"
    tools:context=".Auth.login.LoginFragment">

<ImageView
    android:id="@+id/login_bgImage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_background"
    android:layout_marginBottom="-50dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@id/login_middle" />

<androidx.cardview.widget.CardView
    android:id="@+id/login_middle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/transparent"
    android:layout_marginBottom="@dimen/_20sdp"
    app:cardElevation="0dp"
    app:layout_constraintRight_toRightOf="@+id/login_right_guideline"
    app:layout_constraintLeft_toLeftOf="@+id/login_left_guideline"
    app:layout_constraintBottom_toBottomOf="@id/login_bottom_guideline">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="@color/primary"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/login_form_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/transparent"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/login_emailEdit"
                    android:layout_width="@dimen/_116sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:hint="@string/login_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginStart="2dp"
                    android:src="@drawable/ic_profile"
                    app:layout_constraintBottom_toBottomOf="@id/login_emailEdit"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toStartOf="@id/login_emailEdit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/login_emailEdit" />

                <EditText
                    android:id="@+id/login_passwordEdit"
                    android:layout_width="@dimen/_116sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:hint="@string/login_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_emailEdit" />

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginStart="2dp"
                    android:src="@drawable/lock"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/login_passwordEdit"
                    app:layout_constraintEnd_toStartOf="@id/login_passwordEdit"
                    app:layout_constraintTop_toTopOf="@id/login_passwordEdit" />

                <Button
                    android:id="@+id/login_loginBtn"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/login_loginBtn"
                    android:textSize="@dimen/_16sdp"
                    app:cornerRadius="@dimen/_8sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_passwordEdit" />

                <TextView
                    android:id="@+id/login_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:text="@string/login_forgot_password"
                    android:textAlignment="center"
                    android:textColor="#FF8A2BE2"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_loginBtn" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/googleSigninBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_forgot_password" />

                <TextView
                    android:id="@+id/login_gotoRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:text="@string/login_yet_not_account"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@id/googleSigninBtn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


<androidx.constraintlayout.widget.Guideline
    android:id="@+id/login_left_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.04" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/login_right_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.96" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/login_top_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.02" />


<androidx.constraintlayout.widget.Guideline
    android:id="@+id/login_bottom_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.98" />


</androidx.constraintlayout.widget.ConstraintLayout>