<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".profile.contattaci.ContattaciFragment">

    <TextView
        android:id="@+id/contattaci_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contattaci_title"
        android:textColor="@color/primary"
        android:textSize="@dimen/_24sdp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/contattaci_backbutton"
        app:layout_constraintBottom_toBottomOf="@id/contattaci_backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/contattaci_backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        app:srcCompat="@drawable/ic_chevron_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/contattaci_suggestions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/contattaci_suggestions"
        app:layout_constraintTop_toBottomOf="@id/contattaci_spacer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
    android:id="@+id/contattaci_spacer"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="@dimen/_8sdp"
    android:backgroundTint="@color/disabled"
    android:foregroundGravity="center"
    android:layout_marginHorizontal="@dimen/_24sdp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/contattaci_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/contattaci_faq_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        app:cardElevation="10dp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:contentPadding="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contattaci_suggestions_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/contattaci_contactus_image"
                android:layout_width="@dimen/_42sdp"
                android:layout_height="@dimen/_30sdp"
                app:srcCompat="@drawable/faqsvg"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/contattaci_contactus_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:text="@string/contattaci_faq"
                android:textAllCaps="true"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/contattaci_contactus_image"
                app:layout_constraintBottom_toTopOf="@+id/contattaci_contactus_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/contattaci_contactus_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:text="@string/faq_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/contattaci_contactus_image"
                app:layout_constraintTop_toBottomOf="@+id/contattaci_contactus_title">

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/contattaci_contacts_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        app:cardElevation="10dp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:contentPadding="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contattaci_faq_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/contattaci_contacts_image"
                android:layout_width="@dimen/_41sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/contattacisvg"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/contattaci_contacts_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:text="@string/contattaci_title"
                android:textAllCaps="true"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/contattaci_contacts_image"
                app:layout_constraintBottom_toTopOf="@id/contattaci_contacts_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/contattaci_contacts_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:text="@string/contact_us_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/contattaci_contacts_image"
                app:layout_constraintTop_toBottomOf="@id/contattaci_contacts_title">

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>