<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTintMode="src_over"
    tools:context=".Auth.register.RegisterFragment">

    <ImageView
        android:id="@+id/register_bgImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_background"
        android:layout_marginBottom="-50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_middle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/register_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:layout_marginBottom="@dimen/_20sdp"
        app:cardElevation="0dp"
        app:layout_constraintRight_toRightOf="@+id/register_right_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/register_left_guideline"
        app:layout_constraintBottom_toBottomOf="@id/register_bottom_guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:textColor="@color/primary"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/register_form_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/transparent"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@id/register_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/register_emailEdit"
                        android:layout_width="@dimen/_116sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:hint="@string/login_email"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_marginStart="2dp"
                        android:src="@drawable/ic_profile"
                        app:layout_constraintBottom_toBottomOf="@id/register_emailEdit"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@id/register_emailEdit"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/register_emailEdit" />

                    <EditText
                        android:id="@+id/register_usernameEdit"
                        android:layout_width="@dimen/_116sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:hint="@string/register_username"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/register_emailEdit" />

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_marginStart="2dp"
                        android:src="@drawable/ic_text"
                        app:layout_constraintBottom_toBottomOf="@id/register_usernameEdit"
                        app:layout_constraintEnd_toStartOf="@id/register_usernameEdit"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/register_usernameEdit" />

                    <EditText
                        android:id="@+id/register_passwordEdit"
                        android:layout_width="@dimen/_116sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:hint="@string/login_password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/register_usernameEdit" />

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_marginStart="2dp"
                        android:src="@drawable/lock"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/register_passwordEdit"
                        app:layout_constraintEnd_toStartOf="@id/register_passwordEdit"
                        app:layout_constraintTop_toTopOf="@id/register_passwordEdit" />

                    <EditText
                        android:id="@+id/register_repeatPasswordEdit"
                        android:layout_width="@dimen/_116sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:hint="@string/register_repeatPwd"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/register_passwordEdit" />

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_marginStart="2dp"
                        android:src="@drawable/lock"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/register_repeatPasswordEdit"
                        app:layout_constraintEnd_toStartOf="@id/register_repeatPasswordEdit"
                        app:layout_constraintTop_toTopOf="@id/register_repeatPasswordEdit" />

                    <Button
                        android:id="@+id/register_signUpBtn"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/black"
                        android:text="@string/register_register"
                        android:textSize="@dimen/_16sdp"
                        app:cornerRadius="@dimen/_8sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/register_repeatPasswordEdit" />

                    <TextView
                        android:id="@+id/register_gotoLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:clickable="true"
                        android:text="@string/register_already_have_account"
                        android:textAlignment="center"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintTop_toBottomOf="@id/register_signUpBtn"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />


</androidx.constraintlayout.widget.ConstraintLayout>